--- a/Trabajo_SED/Trabajo_SED.runs/synth_1/.vivado.begin.rst
+++ b/Trabajo_SED/Trabajo_SED.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="sergi" Host="DESKTOP-81MS265" Pid="4144" HostCore="8" HostMemory="08376602624">
+    <Process Command="vivado.bat" Owner="LENOVO" Host="AMELIE" Pid="18764" HostCore="8" HostMemory="08377323520">
     </Process>
 </ProcessHandle>
